@@ -12,6 +12,8 @@ Version 3.1.0 (v3.1.0 RTM)
 		 (fixes  #119)
 		-[Core] Improved performance of GetTypesToRegister method and the Register and RegisterCollection
 		 overloads that accept a list of collections.
+		-[Core] Check added to InstanceProducer constructor to prevent incompatible Registration objects 
+		 from being supplied. (fixes #52)
 
 
 Version 3.0.5 (v3.0.5 RTM) 2015-09-03
